At #528 Add Minimap, HostStatus, IPMI and Link Visibility options in Topology (Backend)
